# socdiff

./: .gitignore  LICENSE  README.md  facebook.html  instagram.html  linkedin.html  sdiff.cabal  socdiff.cabal  socdiff.cfg.example  socdiff.hs  store-via-git.sh
api/: Web-Socdiff-Facebook-DataSource.html  Web-Socdiff-Facebook-Facebook.html  Web-Socdiff-Github-DataSource.html  Web-Socdiff-Github-Github.html  Web-Socdiff-Instagram-DataSource.html  Web-Socdiff-Instagram-Instagram.html  Web-Socdiff-Twitter-DataSource.html  Web-Socdiff-Twitter-Twitter.html  doc-index.html  index-frames.html  index.html  mini_Web-Socdiff-Facebook-DataSource.html  mini_Web-Socdiff-Facebook-Facebook.html  mini_Web-Socdiff-Github-DataSource.html  mini_Web-Socdiff-Github-Github.html  mini_Web-Socdiff-Instagram-DataSource.html  mini_Web-Socdiff-Instagram-Instagram.html  mini_Web-Socdiff-Twitter-DataSource.html  mini_Web-Socdiff-Twitter-Twitter.html  socdiff.haddock
scripts/: deploy-haddock-manually.sh
src/: getFacebookToken.hs  getLinkedinToken.hs  socdiff.hs
src/Web/Sdiff/Github/: DataSource.hs  Github.hs
src/Web/Socdiff/FB/: DataSource.hs  FB.hs
src/Web/Socdiff/Facebook/: DataSource.hs  Facebook.hs
src/Web/Socdiff/Github/: DataSource.hs  Github.hs
src/Web/Socdiff/Instagram/: DataSource.hs  Instagram.hs
src/Web/Socdiff/LinkedIn/: DataSource.hs  LinkedIn.hs
src/Web/Socdiff/Twitter/: DataSource.hs  Twitter.hs
