name:                socdiff
version:             0.1.0.0
synopsis:            Social diff
homepage:            https://github.com/CodeBlock/socdiff
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Socdiff.Github.DataSource
                       Web.Socdiff.Github.Github
                       Web.Socdiff.Twitter.Twitter
                       Web.Socdiff.Twitter.DataSource

  other-extensions:    OverloadedStrings
                     , StandaloneDeriving
                     , RecordWildCards
                     , GADTs
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , DeriveDataTypeable

  build-depends:       async >= 2 && < 3
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 1
                     , hashable >= 1.2 && < 1.3
                     , github >= 0.8 && < 1
                     , haxl >= 0.1.0.0 && < 0.2
                     , lens >= 4.0 && < 5
                     , text >= 1 && < 2
                     , transformers >= 0.4 && < 1
                     , wreq >= 0.1.0.1 && < 0.2

  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

executable socdiff
  build-depends:       base >= 4 && < 5
                     , directory >= 1.2 && < 2
                     , filepath >= 1.3 && < 2
                     , haxl >= 0.1.0.0 && < 0.2
                     , socdiff
                     , text >= 1 && < 2

  main-is:             src/socdiff.hs
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010